# Qt-Kurarin

./: .gitignore  README.jp.md  README.md  README.zh-cn.md
.github/workflows/: build.jp.md  build.md  build.yml  build.zh-cn.md
docs/dev/: migrate-resources.md
python/: README.md  pyproject.toml  requirements.txt  uv.md
python/src/qt_kurarin/: __init__.py  animation.py  cli.py  easing.py  frame_style.py  main.py  parser.py  player.py  sprite.py  tui.py  window.py
python/src/qt_kurarin/data/: script.txt
python/src/qt_kurarin/resources/logo/: convert_ico_to_png.py  generate_macos_icon_assets.py
scripts/: migrate_win_kurarin.py
wallpaper/: gen_wallpaper.py
