[project]
name = "qt-kurarin"
version = "0.0.1-beta.3+20260518"
description = "Prototype multi-window Qt reconstruction of Kyukurarin desktop MV effects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6==6.11.0",
]

[project.scripts]
qt-kurarin = "qt_kurarin.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qt_kurarin"]
