[project]
name = "qt-kurarin"
version = "0.2.3-rc.1+20260519"
description = "Prototype multi-window Qt reconstruction of Kyukurarin desktop MV effects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6==6.11.0",
    "textual==6.6.0",
]

[project.scripts]
qt-kurarin = "qt_kurarin.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qt_kurarin"]

[tool.hatch.build.targets.sdist]
include = [
    "src/qt_kurarin/**",
    "pyproject.toml",
    "README.md",
    "requirements.txt",
    "uv.lock",
    "uv.md",
]
