[project]
name = "qt-kurarin"
version = "0.2.3+20260519"
description = "> 🖥️ Qt-powered Kyuukurarin (きゅうくらりん) on your desktop — animated sprites in sync with the music 🎵"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6==6.11.0",
    "textual==6.6.0",
]

[project.scripts]
qt-kurarin = "qt_kurarin.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qt_kurarin"]

[tool.hatch.build.targets.sdist]
include = [
    "src/qt_kurarin/**",
    "pyproject.toml",
    "README.md",
    "requirements.txt",
    "uv.lock",
    "uv.md",
]
